--- a/src/components/creation/creation.scss
+++ b/src/components/creation/creation.scss
@@ -26,6 +26,7 @@
     line-height: 1.5em;
   }
 }
+
 .creation {
   background-color: black;
   padding: 50px 0;
@@ -77,4 +78,84 @@
     display: block;
   }
 
+}
+
+@media (max-width: 1160px) {
+  .item {
+    // margin: 0 30px;
+    // text-align: center;
+    // flex: 0 1 25%;
+  
+    &__img {
+      // margin: 0 auto;
+      width: 130px;
+      height: 130px;
+      // overflow: hidden;
+      // background-color: $colorBlack;
+      // border-radius: 30px;
+      // img {
+      //   width: 100%;
+      //   height: 100%;
+      // }
+    }
+  
+    &__description {
+      // color: white;
+      // font-family: $font-family-subtitle, sans-serif;
+      font-size: 1.5em;
+      margin: 20px 0 0;
+      // line-height: 1.5em;
+    }
+  }
+  
+  .creation {
+    // background-color: black;
+    // padding: 50px 0;
+    // color: white;
+  
+    &__row {
+      margin: 50px 0;
+      display: flex;
+      flex-wrap: wrap;
+      padding: 5px;
+      justify-content: center;
+    }
+  
+    &__box {
+    
+      max-width: 100%;
+      padding: 10px 15px;
+      // display: flex;
+      // flex-wrap: wrap;
+      font-size: 1.5em;
+      // font-family: $font-family-subtitle, sans-serif;
+      // text-transform: uppercase;
+      // margin: 0 auto 30px;
+      line-height: 1.8em;
+      // font-weight: 600;
+  
+    }
+  
+    &__question {
+      padding: 10px;
+      // flex: 0 1 30%;
+     
+    }
+  
+    &__about {
+      padding: 0 0 0 10%;
+      // flex: 0 1 70%;
+      
+
+      ul {
+        padding: 10px;
+      }
+    }
+    
+    &__btn {
+      margin: 0 auto;
+      display: block;
+    }
+  
+  }
 }
