--- a/src/components/goal/goal.scss
+++ b/src/components/goal/goal.scss
@@ -5,10 +5,8 @@
   color: white;
   font-family: $font-family-title;
   font-size: 2em;
-  // text-shadow: 0 0 5px red;
   font-family: $font-family-title, sans-serif;
   font-weight: 700;
-  // letter-spacing: 0.07em;
   text-transform: uppercase;
 
   &__wrapper {
@@ -25,8 +23,6 @@
     img {
       width: 100%;
       border-radius: 10px;
-      // border: 1px solid rgb(129, 7, 7);
-      // box-shadow: 0 0 10px rgb(129, 7, 7);
     }
   }
 
@@ -41,15 +37,10 @@
 
   &__content {
     padding: 20px;
-    border-radius: 15px;
-    // border: 1px solid rgb(129, 7, 7);
-    // box-shadow: 0 0 5px rgb(129, 7, 7);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    // background-color: $colorBlack;
     margin-bottom: 20px;
-    // font-size: 0.8em;
     line-height: 1.5em;
   }
 
@@ -63,10 +54,136 @@
     text-align: left;
     text-shadow: none;
     font-weight: 400;
-    // letter-spacing: 0.05em;
     width: 90%;
     margin: 20px 0 0 auto;
     font-size: 0.85em;
    
+  }
+}
+
+@media (max-width: 1250px) {
+  .goal {
+    // background-color: $colorBlack;
+    // color: white;
+    // font-family: $font-family-title;
+    font-size: 1.6em;
+    // font-family: $font-family-title, sans-serif;
+    // font-weight: 700;
+    // text-transform: uppercase;
+  
+    // &__wrapper {
+    //   height: 100vh;
+    //   display: flex;
+    // }
+  
+    // &__image {
+    //   flex: 0 1 50%;
+    //   padding: 20px;
+    //   display: flex;
+    //   align-items: center;
+  
+    //   img {
+    //     width: 100%;
+    //     border-radius: 10px;
+    //   }
+    // }
+  
+    // &__box {
+    //   flex: 0 1 50%;
+    //   display: flex;
+    //   flex-direction: column;
+    //   justify-content: center;
+    //   position: relative;
+    //   padding: 20px;
+    // }
+  
+    // &__content {
+    //   padding: 20px;
+    //   border-radius: 15px;
+    //   display: flex;
+    //   flex-direction: column;
+    //   justify-content: space-between;
+    //   margin-bottom: 20px;
+    //   line-height: 1.5em;
+    // }
+  
+    // &__question {
+    //   text-align: left;
+    // }
+  
+    // &__answer {
+    //   text-align: left;
+    //   text-transform: none;
+    //   text-align: left;
+    //   text-shadow: none;
+    //   font-weight: 400;
+    //   width: 90%;
+    //   margin: 20px 0 0 auto;
+    //   font-size: 0.85em;
+     
+    // }
+  }
+}
+
+@media (max-width: 1030px) {
+  .goal {
+    // background-color: $colorBlack;
+    // color: white;
+    // font-family: $font-family-title;
+    font-size: 1.5em;
+    // font-family: $font-family-title, sans-serif;
+    // font-weight: 700;
+    // text-transform: uppercase;
+  
+    &__wrapper {
+      margin-top: 20px;
+      height: auto;
+      display: block;
+    }
+  
+    &__image {
+      max-width: 500px;
+      margin: 0 auto;
+      // padding: 20px;
+      // display: flex;
+      // align-items: center;
+      img {
+        // width: 100%;
+        // border-radius: 10px;
+      }
+    }
+  
+    &__box {
+      // display: flex;
+      // flex-direction: column;
+      // justify-content: center;
+      // position: relative;
+      padding: 0;
+    }
+  
+    &__content {
+      padding: 10px;
+      // display: flex;
+      // flex-direction: column;
+      // justify-content: space-between;
+      margin-bottom: 10px;
+      line-height: 1.3em;
+    }
+  
+    &__question {
+      // text-align: left;
+      padding-left: 40px;
+    }
+  
+    &__answer {
+      // text-transform: none;
+      // text-align: left;
+      // text-shadow: none;
+      // font-weight: 400;
+      // width: 90%;
+      // margin: 10px 0 0 auto;
+      font-size: 0.9em;
+     
+    }
   }
 }
