--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -78,6 +78,142 @@
   }
 }
 
+
+@media (max-width: 1160px) {
+  .home {
+   
+    &__box {
+      // padding-top: 170px;
+      // max-width: 100%;
+      // height: 100vh;
+      // color: white;
+      // // font-family: $font-family-title, sans-serif;
+      // display: flex;
+      // flex-direction: column;
+      // justify-content: space-around;
+    }
+  
+    &__greetings {
+      // text-align: center;
+      // line-height: 1.3em;
+      font-size: 2.3em;
+      // font-weight: 600;
+      // letter-spacing: 0.1em;
+    }
+  
+    &__row {
+      font-size: 0.8em;
+      padding: 20px;
+      // font-weight: 700;
+      // line-height: 1.5em;
+      // display: flex;
+      // align-items: flex-end;
+      // justify-content: space-between;
+    }
+  
+    &__column {
+      flex: 0 1 50%;
+      // height: 320px;
+      // overflow: hidden;
+      // display: flex;
+      // flex-direction: column;
+      // justify-content: center;
+    }
+  
+    &__title {
+      // font-size: 2em;
+      // text-transform: uppercase;
+      // text-align: center;
+      // margin-bottom: 40px;
+    }
+  
+    &__list {
+      li {
+        // font-size: 1.7em;
+        // text-transform: capitalize;
+        // text-align: center;
+        // font-family: $font-family-subtitle;
+        // font-weight: 400;
+        line-height: 1.8em;
+      }
+    }
+  
+    &__video {
+      // border-radius: 10px;
+      // width: 100%;
+      // // height: 100%;
+    }
+  }
+}
+
+@media (max-width: 700px) {
+  .home {
+   
+    &__box {
+      // padding-top: 170px;
+      // max-width: 100%;
+      // height: 100vh;
+      // color: white;
+      // // font-family: $font-family-title, sans-serif;
+      // display: flex;
+      // flex-direction: column;
+      // justify-content: space-around;
+    }
+  
+    &__greetings {
+      // text-align: center;
+      // line-height: 1.3em;
+      font-size: 2.3em;
+      // font-weight: 600;
+      // letter-spacing: 0.1em;
+    }
+  
+    &__row {
+      font-size: 0.8em;
+      padding: 20px;
+      // font-weight: 700;
+      // line-height: 1.5em;
+      // display: flex;
+      // align-items: flex-end;
+      // justify-content: space-between;
+    }
+  
+    &__column {
+      flex: 0 1 50%;
+      // height: 320px;
+      // overflow: hidden;
+      // display: flex;
+      // flex-direction: column;
+      // justify-content: center;
+    }
+  
+    &__title {
+      // font-size: 2em;
+      // text-transform: uppercase;
+      // text-align: center;
+      // margin-bottom: 40px;
+    }
+  
+    &__list {
+      li {
+        // font-size: 1.7em;
+        // text-transform: capitalize;
+        // text-align: center;
+        // font-family: $font-family-subtitle;
+        // font-weight: 400;
+        line-height: 1.8em;
+      }
+    }
+  
+    &__video {
+      // border-radius: 10px;
+      // width: 100%;
+      // // height: 100%;
+    }
+  }
+}
+
+
 // @media (max-width: 883px) {
 //   .home {
 //     &__description {
