--- a/src/styles/_generic.scss
+++ b/src/styles/_generic.scss
@@ -31,4 +31,10 @@ body.lock {
   box-shadow: 0 0 5px rgb(129, 7, 7);
 }
 
-// to rename for generic, to add btn, correct title
+@media (max-width: 700px) {
+  .title {
+    font-size: 1.5em;
+  }
+}
+
+// to add btn
