--- a/src/components/ask/ask.scss
+++ b/src/components/ask/ask.scss
@@ -41,7 +41,6 @@
   .form {
     &__label {
       font-size: 0.8em;
-      // text-transform: lowercase;
       text-align: center;
       font-family: $font-family-subtitle;
       font-weight: 400;
@@ -63,38 +62,131 @@
   }
 }
 
-.btn {
-  color: white;
-  background-color: rgb(233, 15, 15);
-  padding: 5px 10px;
-  border-radius: 5px;
-  font-weight: 600;
-  font-size: 22px;
-  font-family: $font-family-subtitle,sans-serif;
-  width: fit-content;
+@media (max-width: 1060px) {
+  .ask {
+    // background-color: black;
+    // text-align: center;
+    // color: white;
+    font-size: 1.8em;
+    // font-family: $font-family-title, sans-serif;
+    // line-height: 1.5em;
+    // padding: 50px 0 10px;
+  
+    &__title {
+      font-size: 0.9em;
+    }
+  
+    &__box {
+      // display: flex;
+      height: auto;
+      // align-items: center;
+      // justify-content: center;
+      // position: relative;
+    }
+  
+    &__image {
+      // position: absolute;
+      height: 200px;
+      top: 40%;
+      // transform: translateY(-50%);
+      left: 7%;
+  
+      // img {
+      //   width: 100%;
+      //   height: 100%;
+      // }
+    }
+  
+    // &__form {
+    //   flex: 0 1 50%;
+    // }
+  
+    .form {
+      // &__label {
+      //   font-size: 0.8em;
+      //   text-align: center;
+      //   font-family: $font-family-subtitle;
+      //   font-weight: 400;
+      //   line-height: 2em;
+      // }
+      // &__input {
+      //   input {
+      //     width: 60%;
+      //     font-size: 0.7em;
+      //     padding: 5px 7px;
+      //     border-radius: 5px;
+      //     margin-bottom: 10px;
+      //   }
+      // }
+  
+      // &__btn {
+      //   margin: 30px 0;
+      // }
+    }
+  }
 }
 
-
-.btn:hover {
-  box-shadow: 0 0 7px White;
+@media (max-width: 700px) {
+  .ask {
+    // background-color: black;
+    // text-align: center;
+    // color: white;
+    // font-size: 1.8em;
+    // font-family: $font-family-title, sans-serif;
+    // line-height: 1.5em;
+    // padding: 50px 0 10px;
+  
+    &__title {
+      font-size: 0.7em;
+    }
+  
+    &__box {
+      display: block;
+      // height: auto;
+      // align-items: center;
+      // justify-content: center;
+      // position: relative;
+    }
+  
+    &__image {
+      position: relative;
+      height: 150px;
+      top: 0;
+      transform: translateY(0);
+      left: 0;
+      margin-bottom: 15px;
+  
+      // img {
+      //   width: 100%;
+      //   height: 100%;
+      // }
+    }
+  
+    // &__form {
+    //   flex: 0 1 50%;
+    // }
+  
+    .form {
+      &__label {
+        font-size: 0.7em;
+        // text-align: center;
+        // font-family: $font-family-subtitle;
+        // font-weight: 400;
+        line-height: 1.2em;
+      }
+      &__input {
+        input {
+          width: 80%;
+          // font-size: 0.7em;
+          // padding: 4px 7px;
+          // border-radius: 5px;
+          // margin-bottom: 10px;
+        }
+      }
+  
+      &__btn {
+        margin: 20px 0;
+      }
+    }
+  }
 }
-
-// @media (max-width: 883px) {
-//   .home {
-//     &__description {
-//       line-height: 1.2em;
-//     }
-//   }
-// }
-// @media (max-width: 700px) {
-//   .home {
-//     padding-top: 400px;
-//     height: 100vh;
-
-//     &__box {
-//       padding: 0;
-//       font-size: 1.4em;
-//       line-height: 1.2em;
-//     }
-//   }
-// }
