--- a/src/components/discount/discount.scss
+++ b/src/components/discount/discount.scss
@@ -25,8 +25,7 @@
   }
 }
 
-.timer {
-  
+.timer { 
   color: white;
   height: 50vh;
   display: flex;
@@ -37,7 +36,7 @@
 
   &__text {
     
-    line-height: 1.3em;
+    line-height: 1.5em;
     font-size: 2em;
     padding: 20px 0 0;
     text-transform: uppercase;
@@ -74,4 +73,160 @@
     border-bottom: 2px solid white;
   }
   
+}
+
+@media (max-width: 1030px) {
+  .discount {
+    // background-image: url("../../images/fundo_leve1.jpg");
+    // background-position: center;
+    // background-size: cover;
+    // background-repeat: repeat-x;
+    // color: #ffffff;
+    // text-align: center;
+    // font-family: $font-family-subtitle, sans-serif;
+    // padding-top: 10px;
+  
+    &__title {
+      margin: 50px auto 0;
+      font-size: 2.5em;
+    }
+  
+    &__image {
+      width: 130px;
+      margin: 40px auto;
+  
+      img {
+        width: 100%;
+      }
+    }
+  }
+  
+  .timer { 
+    // color: white;
+    // height: 50vh;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    // padding-bottom: 50px;
+    letter-spacing: 0.05em;
+  
+    &__text {
+      
+      // line-height: 1.5em;
+      font-size: 1.6em;
+      // padding: 20px 0 0;
+      // text-transform: uppercase;
+    }
+  
+    &__time {
+      // letter-spacing: 0.1em;
+      font-size: 60px;
+      // font-weight: bold;
+      // padding: 5px 0;
+      margin: 30px 0;
+      // text-shadow: 0 0 4px white;
+     
+    }
+  
+    &__title {
+      // color:#ffffff;
+      font-size: 1.6em;
+      // text-transform: uppercase;
+      // width: fit-content;
+       padding: 1px;
+      // margin: 0 auto;
+      // transition: all 0.3s linear 0.1s;
+      // line-height: 1.5em;
+    }
+  
+  
+    // &__title:hover {
+    //   text-shadow: 0 0 5px rgb(129, 7, 7);
+    //   transform: scale(1.05);
+    //   text-shadow: 0 0 2px white;
+    //   transition: all 0.3s linear 0.1s;
+    //   border-top: 2px solid white;
+    //   border-bottom: 2px solid white;
+    // }
+    
+  }
+}
+
+@media (max-width: 700px) {
+  .discount {
+    // background-image: url("../../images/fundo_leve1.jpg");
+    // background-position: center;
+    // background-size: cover;
+    // background-repeat: repeat-x;
+    // color: #ffffff;
+    // text-align: center;
+    // font-family: $font-family-subtitle, sans-serif;
+    // padding-top: 10px;
+  
+    &__title {
+      margin: 30px auto 0;
+      font-size: 2em;
+    }
+  
+    &__image {
+      width: 130px;
+      margin: 25px auto;
+  
+      // img {
+      //   width: 100%;
+      // }
+    }
+  }
+  
+  .timer { 
+    overflow: hidden;
+    // color: white;
+    height: auto;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    padding-bottom: 20px;
+    // letter-spacing: 0.05em;
+  
+    &__text {
+      
+      // line-height: 1.5em;
+      font-size: 1.2em;
+      // padding: 20px 0 0;
+      // text-transform: uppercase;
+    }
+  
+    &__time {
+      // letter-spacing: 0.1em;
+      font-size: 40px;
+      line-height: 1.3em;
+      // font-weight: bold;
+      // padding: 5px 0;
+      margin: 15px 0;
+      // text-shadow: 0 0 4px white;
+     
+    }
+  
+    &__title {
+      // color:#ffffff;
+      font-size: 1.2em;
+      // text-transform: uppercase;
+      // width: fit-content;
+       padding: 1px;
+      // margin: 0 auto;
+      // transition: all 0.3s linear 0.1s;
+      // line-height: 1.5em;
+    }
+  
+  
+    // &__title:hover {
+    //   text-shadow: 0 0 5px rgb(129, 7, 7);
+    //   transform: scale(1.05);
+    //   text-shadow: 0 0 2px white;
+    //   transition: all 0.3s linear 0.1s;
+    //   border-top: 2px solid white;
+    //   border-bottom: 2px solid white;
+    // }
+    
+  }
 }
