--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -21,7 +21,6 @@
     text-align: center;
     line-height: 1.3em;
     font-size: 3em;
-    // text-transform: uppercase;
     font-weight: 600;
     letter-spacing: 0.1em;
   }
@@ -31,8 +30,10 @@
     font-weight: 700;
     line-height: 1.5em;
     display: flex;
+    flex-direction: row-reverse;
     align-items: flex-end;
     justify-content: space-between;
+    margin-right: 15px;
   }
 
   &__column {
@@ -42,6 +43,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    
   }
 
   &__title {
@@ -146,11 +148,12 @@
   }
 }
 
-@media (max-width: 700px) {
+
+@media (max-width: 1030px) {
   .home {
    
     &__box {
-      // padding-top: 170px;
+      padding-top: 135px;
       // max-width: 100%;
       // height: 100vh;
       // color: white;
@@ -158,29 +161,33 @@
       // display: flex;
       // flex-direction: column;
       // justify-content: space-around;
+     
     }
   
     &__greetings {
       // text-align: center;
       // line-height: 1.3em;
-      font-size: 2.3em;
+      font-size: 2.2em;
       // font-weight: 600;
       // letter-spacing: 0.1em;
     }
   
     &__row {
+      margin-right: 0;
+      
       font-size: 0.8em;
-      padding: 20px;
+      padding: 25px 0 15px;
       // font-weight: 700;
-      // line-height: 1.5em;
-      // display: flex;
-      // align-items: flex-end;
+      line-height: 1em;
+      display: block;
+      // align-items: center;
       // justify-content: space-between;
     }
   
     &__column {
-      flex: 0 1 50%;
-      // height: 320px;
+   
+      // flex: 0 1 50%;
+      height: auto;
       // overflow: hidden;
       // display: flex;
       // flex-direction: column;
@@ -191,45 +198,96 @@
       // font-size: 2em;
       // text-transform: uppercase;
       // text-align: center;
-      // margin-bottom: 40px;
+      margin: 30px 0;
     }
   
     &__list {
       li {
-        // font-size: 1.7em;
+        font-size: 1.8em;
         // text-transform: capitalize;
         // text-align: center;
         // font-family: $font-family-subtitle;
         // font-weight: 400;
-        line-height: 1.8em;
+        line-height: 1.7em;
       }
     }
   
     &__video {
       // border-radius: 10px;
-      // width: 100%;
-      // // height: 100%;
+      margin: 0 auto;
+       width: 60%;
+       height: 250px;
     }
   }
 }
 
-
-// @media (max-width: 883px) {
-//   .home {
-//     &__description {
-//       line-height: 1.2em;
-//     }
-//   }
-// }
-// @media (max-width: 700px) {
-//   .home {
-//     padding-top: 400px;
-//     height: 100vh;
-
-//     &__box {
-//       padding: 0;
-//       font-size: 1.4em;
-//       line-height: 1.2em;
-//     }
-//   }
-// }
+@media (max-width: 700px) {
+  .home {
+   
+    &__box {
+      padding-top: 130px;
+      // max-width: 100%;
+      // height: 100vh;
+      // color: white;
+      // // font-family: $font-family-title, sans-serif;
+      // display: flex;
+      // flex-direction: column;
+      // justify-content: space-around;
+     
+    }
+  
+    &__greetings {
+      // text-align: center;
+      // line-height: 1.3em;
+      font-size: 1.8em;
+      // font-weight: 600;
+      // letter-spacing: 0.1em;
+    }
+  
+    &__row {
+      margin-right: 0;
+      // font-size: 0.8em;
+      padding: 10px 0;
+      // font-weight: 700;
+      // line-height: 1em;
+      // display: block;
+      // align-items: center;
+      // justify-content: space-between;
+    }
+  
+    &__column {
+   
+      // flex: 0 1 50%;
+      height: auto;
+      // overflow: hidden;
+      // display: flex;
+      // flex-direction: column;
+      // justify-content: center;
+    }
+  
+    &__title {
+      // font-size: 2em;
+      // text-transform: uppercase;
+      // text-align: center;
+      margin: 30px 0;
+    }
+  
+    &__list {
+      li {
+        font-size: 1.8em;
+        // text-transform: capitalize;
+        // text-align: center;
+        // font-family: $font-family-subtitle;
+        // font-weight: 400;
+        line-height: 1.7em;
+      }
+    }
+  
+    &__video {
+      // border-radius: 10px;
+      margin: 0 auto;
+       width: 80%;
+       height: 220px;
+    }
+  }
+}
