--- a/src/styles/_generic.scss
+++ b/src/styles/_generic.scss
@@ -31,9 +31,32 @@ body.lock {
   box-shadow: 0 0 5px rgb(129, 7, 7);
 }
 
+.btn {
+  color: white;
+  background-color: rgb(233, 15, 15);
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-weight: 600;
+  font-size: 22px;
+  font-family: $font-family-subtitle,sans-serif;
+  width: fit-content;
+}
+
+
+.btn:hover {
+  box-shadow: 0 0 7px White;
+}
+
 @media (max-width: 700px) {
   .title {
-    font-size: 1.5em;
+    font-size: 1.3em;
+    line-height: 1.5em;
+    text-align: center;
+    padding: 4px 15px;
+  }
+  .btn {
+    padding: 5px 8px;
+    font-size: 18px;
   }
 }
 
