--- a/src/components/creation/creation.scss
+++ b/src/components/creation/creation.scss
@@ -159,3 +159,83 @@
   
   }
 }
+
+@media (max-width: 700px) {
+  .item {
+    margin: 0 auto;
+    // text-align: center;
+    flex: 0 1 25%;
+  
+    &__img {
+      // margin: 0 auto;
+      width: 100px;
+      height: 100px;
+      // overflow: hidden;
+      // background-color: $colorBlack;
+      // border-radius: 30px;
+      // img {
+      //   width: 100%;
+      //   height: 100%;
+      // }
+    }
+  
+    &__description {
+      // color: white;
+      // font-family: $font-family-subtitle, sans-serif;
+      font-size: 1.2em;
+      // margin: 20px 0 0;
+      // line-height: 1.5em;
+    }
+  }
+  
+  .creation {
+    // background-color: black;
+    padding: 50px 0 30px;
+    // color: white;
+  
+    &__row {
+      margin: 50px 0;
+      // display: flex;
+      // flex-wrap: wrap;
+      padding: 0;
+      // justify-content: center;
+    }
+  
+    &__box {
+      overflow: hidden;
+      max-width: 100%;
+      padding: 0;
+      // display: flex;
+      // flex-wrap: wrap;
+      font-size: 1.2em;
+      // font-family: $font-family-subtitle, sans-serif;
+      // text-transform: uppercase;
+      // margin: 0 auto 30px;
+      line-height: 1.7em;
+      // font-weight: 600;
+  
+    }
+  
+    &__question {
+      padding: 10px;
+      flex: 0 1 40%;
+     
+    }
+  
+    &__about {
+      padding: 0 0 0 10%;
+      flex: 0 1 60%;
+      
+
+      ul {
+        padding: 10px;
+      }
+    }
+    
+    &__btn {
+      margin: 0 auto;
+      display: block;
+    }
+  
+  }
+}
