--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -273,6 +273,7 @@
     }
   
     &__list {
+      padding-bottom: 25px;
       li {
         font-size: 1.8em;
         // text-transform: capitalize;
@@ -280,13 +281,14 @@
         // font-family: $font-family-subtitle;
         // font-weight: 400;
         line-height: 1.7em;
+        
       }
     }
   
     &__video {
       // border-radius: 10px;
       margin: 0 auto;
-       width: 80%;
+       width: 90%;
        height: 220px;
     }
   }
