--- a/src/components/promotion/promotion.scss
+++ b/src/components/promotion/promotion.scss
@@ -7,20 +7,16 @@
   background-repeat: repeat-x;
   padding: 50px 0 20px;
 
-  &__title{
-
-  }
-
   &__row {
     margin: 40px 0 0;
     display: flex;
-    padding: 5px;
-    justify-content: center;
-    
+    justify-content: center; 
   }
 
   &__box {
     padding: 10px 30px;
+    text-align: justify;
+    
   }
 
   &__text {
@@ -29,7 +25,7 @@
     font-family: $font-family-subtitle;
     font-size: 1.5em;
     text-indent: 50px;
-    line-height: 1.3em;
+    line-height: 1.4em;
   }
 
   &__btn {
@@ -38,32 +34,39 @@
   }
 }
 
-.item {
-  padding: 30px 0;
-  text-align: center;
-  flex: 0 1 25%;
-  
-  &__img {
-    // border: 1px solid white;
-    padding: 15px;
-    margin: 0 auto;
-    width: 160px;
-    height: 160px;
-    overflow: hidden;
-    background-color: $colorBlack;
-    border-radius: 30px;
-    img {
-     
-      width: 100%;
-      height: 100%;
-    }
-  }
+@media (max-width: 1030px) {
 
-  &__description {
-    color: white;
-    font-family: $font-family-subtitle, sans-serif;
-    font-size: 1.8em;
-    margin: 40px 0 0;
-    line-height: 1.5em;
+  .promotion {
+    // background-image: url("../../images/fundo_leve1.jpg");
+    // background-position: center;
+    // background-size: cover;
+    // background-repeat: repeat-x;
+    // padding: 50px 0 20px;
+  
+    &__row {
+      margin: 40px 0 0;
+      // display: flex;
+      // justify-content: center; 
+    }
+  
+    &__box {
+      
+      padding: 10px 15px;
+      
+    }
+  
+    &__text {
+      // margin: 20px 0;
+      // // color: white;
+      // font-family: $font-family-subtitle;
+      font-size: 1.2em;
+      // text-indent: 50px;
+      // line-height: 1.4em;
+    }
+  
+    &__btn {
+      margin: 0 auto 10px;
+      // display: block;
+    }
   }
 }
