third edition adaptive

--- a/src/components/ask/ask.scss
+++ b/src/components/ask/ask.scss
@@ -134,7 +134,7 @@
     // font-size: 1.8em;
     // font-family: $font-family-title, sans-serif;
     // line-height: 1.5em;
-    // padding: 50px 0 10px;
+    padding: 60px 0 10px;
   
     &__title {
       font-size: 0.7em;
