--- a/src/components/discount/discount.pug
+++ b/src/components/discount/discount.pug
@@ -6,6 +6,6 @@
     .discount__timer.timer
       p.timer__text ATÉ 31 DE MAIO MAIO, GANHE DESCONTO PROMOCIONAL DE 10% EM TODOS OS NOSSOS SERVIÇOS
       
-      p.timer__time 21:13:32
+      p.timer__time 21:13:33
       a.timer__title(href="#ask") 
-        p &#11166;  Clique para o primeiro passo! A concorrência já está online e você?  &#11164;
+        p &#x2B9E;  Clique para o primeiro passo! A concorrência já está online e você?  &#x2B9C;
