--- a/src/components/creation/creation.scss
+++ b/src/components/creation/creation.scss
@@ -1,11 +1,14 @@
 @import "../../styles/variables";
 
 .item {
-  margin: 0 30px;
+  margin: 0 50px;
   text-align: center;
   flex: 0 1 25%;
+ 
 
   &__img {
+    border: 1px solid white;
+    padding: 15px;
     margin: 0 auto;
     width: 160px;
     height: 160px;
@@ -205,7 +208,7 @@
       overflow: hidden;
       max-width: 100%;
       padding: 0;
-      // display: flex;
+      display: block;
       // flex-wrap: wrap;
       font-size: 1.2em;
       // font-family: $font-family-subtitle, sans-serif;
