--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -4,11 +4,11 @@ header.header
       img.header__logo.logo(src=require("../../../images/logo_principal.svg"), alt="eformaliza")
     nav.header__nav 
       .header__list
-        a.header__item(href="#home") Home
-        a.header__item(href="#creation") Criamos      
-        a.header__item(href="#promotion") Promovemos
+        a.header__item(href="#home" id="toHome") Home
+        a.header__item(href="#creation" id="toCreation") Criamos      
+        a.header__item(href="#promotion" id="toPromotion") Promovemos
         a.header__item(href="index.html") Blog
         a.header__item(href="index.html") FAQ
-        a.header__item(href="#contacts") Contatos
+        a.header__item(href="#contacts" id="toContacts") Contatos
     nav.header__nav_burger
       .burger__inner  
