--- a/src/components/creation/creation.scss
+++ b/src/components/creation/creation.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables";
 
 .item {
-  margin: 0 50px;
+  margin: 0 50px 20px;
   text-align: center;
   flex: 0 1 25%;
  
@@ -165,7 +165,7 @@
 
 @media (max-width: 700px) {
   .item {
-    margin: 0 auto;
+    margin: 0 20px 20px;
     // text-align: center;
     flex: 0 1 25%;
   
