--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -225,7 +225,7 @@
   .home {
    
     &__box {
-      padding-top: 130px;
+      padding-top: 140px;
       // max-width: 100%;
       // height: 100vh;
       // color: white;
@@ -280,14 +280,14 @@
         // text-align: center;
         // font-family: $font-family-subtitle;
         // font-weight: 400;
-        line-height: 1.7em;
+        line-height: 1.5em;
         
       }
     }
   
     &__video {
       // border-radius: 10px;
-      margin: 0 auto;
+      margin: 5px auto;
        width: 90%;
        height: 220px;
     }
