mobile scroll repaired

--- a/src/components/promotion/promotion.scss
+++ b/src/components/promotion/promotion.scss
@@ -41,7 +41,7 @@
     // background-position: center;
     // background-size: cover;
     // background-repeat: repeat-x;
-    // padding: 50px 0 20px;
+    padding: 60px 0 20px;
   
     &__row {
       margin: 40px 0 0;
