bugs resolved / arrows experiment

--- a/src/components/discount/discount.pug
+++ b/src/components/discount/discount.pug
@@ -8,4 +8,4 @@
       
       p.timer__time 21:13:33
       a.timer__title(href="#ask") 
-        p &#x2B9E;  Clique para o primeiro passo! A concorrência já está online e você?  &#x2B9C;
+        p &#x21D2;  Clique para o primeiro passo! A concorrência já está online e você?  &#x21E6;
