--- a/src/components/creation/creation.scss
+++ b/src/components/creation/creation.scss
@@ -4,7 +4,6 @@
   margin: 0 50px 20px;
   text-align: center;
   flex: 0 1 25%;
- 
 
   &__img {
     border: 1px solid white;
@@ -35,8 +34,7 @@
   padding: 50px 0;
   color: white;
 
-  &__title{
-
+  &__title {
   }
 
   &__row {
@@ -57,30 +55,25 @@
     margin: 0 auto 30px;
     line-height: 2.1em;
     font-weight: 600;
-
   }
 
   &__question {
     padding: 20px;
     flex: 0 1 30%;
-   
-
   }
 
   &__about {
     padding: 20px 20px 20px 250px;
     flex: 0 1 70%;
-   
+
     li:before {
       content: "\00B7      ";
-    
     }
   }
   &__btn {
     margin: 0 auto;
     display: block;
   }
-
 }
 
 @media (max-width: 1160px) {
@@ -88,7 +81,7 @@
     // margin: 0 30px;
     // text-align: center;
     // flex: 0 1 25%;
-  
+
     &__img {
       // margin: 0 auto;
       width: 130px;
@@ -101,7 +94,7 @@
       //   height: 100%;
       // }
     }
-  
+
     &__description {
       // color: white;
       // font-family: $font-family-subtitle, sans-serif;
@@ -110,12 +103,12 @@
       // line-height: 1.5em;
     }
   }
-  
+
   .creation {
     // background-color: black;
     // padding: 50px 0;
     // color: white;
-  
+
     &__row {
       margin: 50px 0;
       display: flex;
@@ -123,9 +116,8 @@
       padding: 5px;
       justify-content: center;
     }
-  
+
     &__box {
-    
       max-width: 100%;
       padding: 10px 15px;
       // display: flex;
@@ -136,30 +128,26 @@
       // margin: 0 auto 30px;
       line-height: 1.8em;
       // font-weight: 600;
-  
     }
-  
+
     &__question {
       padding: 10px;
       // flex: 0 1 30%;
-     
     }
-  
+
     &__about {
       padding: 0 0 0 10%;
       // flex: 0 1 70%;
-      
 
       ul {
         padding: 10px;
       }
     }
-    
+
     &__btn {
       margin: 0 auto;
       display: block;
     }
-  
   }
 }
 
@@ -168,7 +156,7 @@
     margin: 0 20px 20px;
     // text-align: center;
     flex: 0 1 25%;
-  
+
     &__img {
       // margin: 0 auto;
       width: 100px;
@@ -181,7 +169,7 @@
       //   height: 100%;
       // }
     }
-  
+
     &__description {
       // color: white;
       // font-family: $font-family-subtitle, sans-serif;
@@ -190,12 +178,12 @@
       // line-height: 1.5em;
     }
   }
-  
+
   .creation {
     // background-color: black;
     padding: 60px 0 30px;
     // color: white;
-  
+
     &__row {
       margin: 50px 0;
       // display: flex;
@@ -203,7 +191,7 @@
       padding: 0;
       // justify-content: center;
     }
-  
+
     &__box {
       overflow: hidden;
       max-width: 100%;
@@ -216,29 +204,28 @@
       // margin: 0 auto 30px;
       line-height: 1.7em;
       // font-weight: 600;
-  
+ 
     }
-  
+
     &__question {
       padding: 10px;
       flex: 0 1 40%;
-     
     }
-  
+
     &__about {
       padding: 0 0 0 10%;
       flex: 0 1 60%;
-      
 
       ul {
         padding: 10px;
+        margin: 0 0 0 auto;
+        width: fit-content;
       }
     }
-    
+
     &__btn {
       margin: 0 auto;
       display: block;
     }
-  
   }
 }
