--- a/src/components/discount/discount.pug
+++ b/src/components/discount/discount.pug
@@ -8,4 +8,7 @@
       
       p.timer__time 21:13:33
       a.timer__title(href="#ask") 
-        p &#x21D2;  Clique para o primeiro passo! A concorrência já está online e você?  &#x21E6;
+        p 
+          b &#x21D2; &#x21E8; 
+          | Clique para o primeiro passo! A concorrência já está online e você?  
+          b &#x21E6; &#x21D0;
