--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -197,7 +197,7 @@
 
     &__nav_burger {
       display: block;
-      overflow: auto;
+      // overflow: auto;
       
       
     }
@@ -247,7 +247,6 @@
       display: block;
       background-color: $colorBlack;
       padding-bottom: 15px;
-      overflow: auto;
       
     }
 
