--- a/src/components/discount/discount.pug
+++ b/src/components/discount/discount.pug
@@ -4,11 +4,9 @@
     .discount__image 
       img(src=require("../../../images/fire.png"), alt="sale")
     .discount__timer.timer
-      p.timer__text ATÉ 31 DE MAIO MAIO, GANHE DESCONTO PROMOCIONAL DE 10% EM TODOS OS NOSSOS SERVIÇOS
+      p.timer__text ATÉ 31 DE MAIO, GANHE DESCONTO PROMOCIONAL DE 10% EM TODOS OS NOSSOS SERVIÇOS
       
       p.timer__time 21:13:33
       a.timer__title(href="#ask") 
-        p 
-          b &#x21E8; 
-          | Clique para o primeiro passo! A concorrência já está online e você?  
-          b &#x21E6;
+        p.timer__link Clique para o primeiro passo!   
+        p A concorrência já está online e você?
