--- a/src/components/discount/discount.scss
+++ b/src/components/discount/discount.scss
@@ -17,7 +17,7 @@
 
   &__image {
     width: 165px;
-    margin: 60px auto 0;
+    margin: 30px auto 30px;
 
     img {
       width: 100%;
@@ -112,7 +112,7 @@
   
     &__image {
       width: 130px;
-      margin: 40px auto;
+      margin: 40px auto 15px;
   
       img {
         width: 100%;
@@ -189,7 +189,7 @@
   
     &__image {
       width: 130px;
-      margin: 25px auto;
+      margin: 25px auto 0;
   
       // img {
       //   width: 100%;
