--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -14,5 +14,12 @@ footer.footer#contacts
       a.footer__item(href="https://facebook.com") 
         img(src=require("../../../images/icons/new-footer-icons/facebook.svg"), alt="facebook")
         p facebook
-
+    .footer__box 
+      .footer__unit 
+        .footer__dove 
+          img(src=require("../../../images/dove.jpg"), alt="peace")
+      .footer__unit 
+        .footer__copyright 
+          p Created by 
+            a(href="http://eformaliza.com/") eformaliza.com
   
