--- a/src/components/home/home.pug
+++ b/src/components/home/home.pug
@@ -2,7 +2,8 @@
   .container 
     .home__box
       .home__greetings 
-        p Pensou em sites ? Pensou e-Formaliza
+        p Pensou em sites?
+        p Pensou e-Formaliza
       .home__row       
         .home__column
           iframe.home__video(width="853" height="480" src="https://www.youtube.com/embed/p5FUE9UvYbs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
