--- a/src/components/discount/discount.scss
+++ b/src/components/discount/discount.scss
@@ -122,7 +122,7 @@
   
   .timer { 
     // color: white;
-    // height: 50vh;
+    height: auto;
     // display: flex;
     // flex-direction: column;
     // justify-content: center;
@@ -236,11 +236,11 @@
       // transition: all 0.3s linear 0.1s;
       // line-height: 1.5em;
     }
-  
-  
-    &__title:hover {
+    
+    &__link:hover {
       text-shadow: none;
       transform: none;
+      text-shadow: none;
       border-top: none;
       border-bottom: none;
     }
