--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -198,8 +198,6 @@
 
     &__nav_burger {
       display: block;
-      // overflow: auto;
-      
       
     }
 
@@ -228,11 +226,12 @@
     }
 
     &__nav {
+     
       position: absolute;
-      display: block;
-      top: 55px;
+      top: 47px;
       display: none;
       overflow: auto;
+      
       
     }
     &__item:hover {
@@ -247,7 +246,7 @@
     &__list {
       display: block;
       background-color: $colorBlack;
-      padding-bottom: 15px;
+      padding: 15px 0;
       
     }
 
