--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -23,6 +23,10 @@
     font-size: 3em;
     font-weight: 600;
     letter-spacing: 0.1em;
+    p {
+      display: inline-block;
+      margin: 0 7px;
+    }
   }
 
   &__row {
@@ -155,7 +159,7 @@
     &__box {
       padding-top: 135px;
       // max-width: 100%;
-      // height: 100vh;
+      height: auto;
       // color: white;
       // // font-family: $font-family-title, sans-serif;
       // display: flex;
