form send to email

--- a/src/components/ask/ask.pug
+++ b/src/components/ask/ask.pug
@@ -4,7 +4,7 @@
     .ask__box
       .ask__image
         img(src=require("../../../images/student_asking_question.svg"), alt="ask") 
-      form.ask__form.form(action="#")
+      form.ask__form.form(action="https://formsubmit.co/caminante.msk@gmail.com" method="POST")
         .form__label
           label(for="name") Seu nome
         .form__input 
@@ -18,3 +18,4 @@
         .form__input
           input(type="email" placeholder="email" name="email" required)
         button.form__btn.btn(type="submit") Solicitar!  
+
