--- a/src/index.pug
+++ b/src/index.pug
@@ -4,8 +4,8 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
-    meta(name="description" content="criação de sites profissionais" )
-    meta(name="keywords" content=" criacão de sites, criação de sites baratos rj, criação de sites gratis, criação de sites otimizados, criação de sites para advogados, criação de sites para empresas, criação de sites wordpress, criação de sites brasília, criação de sites em brasília, criação de sites em porto alegre, criação de sites em sp, criação de sites baratos, criação de sites profissionais preço, empresas de criação de sites, criação de sites brasilia, criação de sites em campinas, criacao de sites em curitiba, criação de sites em guarulhos, criação de sites em osasco, criação de sites em salvador, criação de sites goiania, criação de sites joinville, criaçao de sites, agencia criação de sites, criação de sites em brasilia, criação de sites em curitiba, criação de sites em fortaleza, criação de sites campinas, empresa de criação de sites, criação de sites sp, tabela de preço criação de sites 2022, criação de sites porto alegre, agencia de criação de sites, criação de sites df, criação de sites rj, criação de sites em bh, criação de sites curitiba, criação de sites bh, criacao de sites, criação de sites profissionais, criação de sites")
+    meta(name="description" content="criação de web sites profissionais" )
+    meta(name="keywords" content="criacão, sites, web, page, pagina, emprendedor, empresa, advogados, guarulhos, osasco, salvador, goiania, joinville, curitiba, fortaleza, campinas, sp, porto alegre, df, brasilia, curitiba, bh, criacao")
     title e-Formaliza
   body#home(style="visibility: hidden;")
     include components/header/header
