adding thanks page

--- a/src/components/ask/ask.pug
+++ b/src/components/ask/ask.pug
@@ -17,5 +17,10 @@
           label(for="name") Seu email
         .form__input
           input(type="email" placeholder="email" name="email" required)
+        input(type="hidden" name="_subject" value="Legal!!!!! Um novo e-mail de eformaliza.com!!!!")
+        input(type="hidden" name="_next" value="https://eformaliza.com/")
+        input(type="hidden" name="_template" value="table")
+        input(type="hidden" name="_captcha" value="false")
         button.form__btn.btn(type="submit") Solicitar!  
+        
 
