--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,7 +7,7 @@
 @use "../components/goal/goal";
 // @use "../components/services/services";
 @use "../components/portfolio/portfolio";
-// @use "../components/obras/obras";
+@use "../components/thanks/thanks";
 @use "../components/offers/offers";
 @use "../components/footer/footer";
 @use "../components/promotion/promotion";
