thanks page finished 1.0

--- a/src/components/ask/ask.pug
+++ b/src/components/ask/ask.pug
@@ -18,7 +18,7 @@
         .form__input
           input(type="email" placeholder="email" name="email" required)
         input(type="hidden" name="_subject" value="Legal!!!!! Um novo e-mail de eformaliza.com!!!!")
-        input(type="hidden" name="_next" value="https://eformaliza.com/")
+        input(type="hidden" name="_next" value="http://eformaliza.com/pages/emailSent.html")
         input(type="hidden" name="_template" value="table")
         input(type="hidden" name="_captcha" value="false")
         button.form__btn.btn(type="submit") Solicitar!  
