--- a/src/components/thanks/thanks.pug
+++ b/src/components/thanks/thanks.pug
@@ -3,6 +3,6 @@
     .thanks__box 
       h1 Muito obrigado!!! 
       h1 Entraremos em contato em breve!
-      a.btn(href="https://eformaliza.com/") Ok!
+      a.thanks__btn.btn(href="https://eformaliza.com/") Ok!
 
           
