--- a/src/components/thanks/thanks.scss
+++ b/src/components/thanks/thanks.scss
@@ -1,297 +1,35 @@
 @import "../../styles/variables";
 
 .thanks {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  display: flex;
+  justify-content: center;
   
   &__box {
+    padding: 20px;
+    background-color: black;
+    box-shadow: 0 0 3px white;
+    border-radius: 30px;
+    width: 60vw;
+    height: 50vh;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
     h1 {
-      
+      color: white;
+      line-height: 1.3em;
+      font-size: 2em;
+      font-family: $font-family-title, Arial, Helvetica, sans-serif;
+      margin: 10px 0;
+
     }
   }
+  &__btn {
+    margin: 50px auto 0;
+    transform: scale(1.3);
+  }
 }
-
-
-// @media (max-width: 1160px) {
-//   .home {
-   
-//     &__box {
-//       // padding-top: 170px;
-//       // max-width: 100%;
-//       // height: 100vh;
-//       // color: white;
-//       // // font-family: $font-family-title, sans-serif;
-//       // display: flex;
-//       // flex-direction: column;
-//       // justify-content: space-around;
-//     }
-  
-//     &__greetings {
-//       // text-align: center;
-//       // line-height: 1.3em;
-//       font-size: 2.3em;
-//       // font-weight: 600;
-//       // letter-spacing: 0.1em;
-//     }
-  
-//     &__row {
-//       font-size: 0.8em;
-//       padding: 20px;
-//       // font-weight: 700;
-//       // line-height: 1.5em;
-//       // display: flex;
-//       // align-items: flex-end;
-//       // justify-content: space-between;
-//     }
-  
-//     &__column {
-//       flex: 0 1 50%;
-//       // height: 320px;
-//       // overflow: hidden;
-//       // display: flex;
-//       // flex-direction: column;
-//       // justify-content: center;
-//     }
-  
-//     &__title {
-//       // font-size: 2em;
-//       // text-transform: uppercase;
-//       // text-align: center;
-//       // margin-bottom: 40px;
-//     }
-  
-//     &__list {
-//       li {
-//         // font-size: 1.7em;
-//         // text-transform: capitalize;
-//         // text-align: center;
-//         // font-family: $font-family-subtitle;
-//         // font-weight: 400;
-//         line-height: 1.8em;
-//       }
-//     }
-  
-//     &__video {
-//       // border-radius: 10px;
-//       // width: 100%;
-//       // // height: 100%;
-//     }
-//   }
-// }
-
-
-// @media (max-width: 1030px) {
-//   .home {
-   
-//     &__box {
-//       padding-top: 135px;
-//       // max-width: 100%;
-//       height: auto;
-//       // color: white;
-//       // // font-family: $font-family-title, sans-serif;
-//       // display: flex;
-//       // flex-direction: column;
-//       // justify-content: space-around;
-     
-//     }
-  
-//     &__greetings {
-//       // text-align: center;
-//       // line-height: 1.3em;
-//       font-size: 2.2em;
-//       // font-weight: 600;
-//       // letter-spacing: 0.1em;
-//     }
-  
-//     &__row {
-//       margin-right: 0;
-      
-//       font-size: 0.8em;
-//       padding: 25px 0 15px;
-//       // font-weight: 700;
-//       line-height: 1em;
-//       display: block;
-//       // align-items: center;
-//       // justify-content: space-between;
-//     }
-  
-//     &__column {
-   
-//       // flex: 0 1 50%;
-//       height: auto;
-//       // overflow: hidden;
-//       // display: flex;
-//       // flex-direction: column;
-//       // justify-content: center;
-//     }
-  
-//     &__title {
-//       // font-size: 2em;
-//       // text-transform: uppercase;
-//       // text-align: center;
-//       margin: 30px 0;
-//     }
-  
-//     &__list {
-//       li {
-//         font-size: 1.8em;
-//         // text-transform: capitalize;
-//         // text-align: center;
-//         // font-family: $font-family-subtitle;
-//         // font-weight: 400;
-//         line-height: 1.7em;
-//       }
-//     }
-  
-//     &__video {
-//       // border-radius: 10px;
-//       margin: 0 auto;
-//        width: 60%;
-//        height: 250px;
-//     }
-//   }
-// }
-
-// @media (max-width: 700px) {
-//   .home {
-   
-//     &__box {
-//       padding-top: 120px;
-//       // max-width: 100%;
-//       height: auto;
-//       // color: white;
-//       // // font-family: $font-family-title, sans-serif;
-//       // display: flex;
-//       // flex-direction: column;
-//       // justify-content: space-around;
-     
-//     }
-  
-//     &__greetings {
-//       // text-align: center;
-//       // line-height: 1.3em;
-//       font-size: 1.8em;
-//       // font-weight: 600;
-//       // letter-spacing: 0.1em;
-//     }
-  
-//     &__row {
-//       margin-right: 0;
-//       // font-size: 0.8em;
-//       padding: 10px 0;
-//       // font-weight: 700;
-//       // line-height: 1em;
-//       // display: block;
-//       // align-items: center;
-//       // justify-content: space-between;
-//     }
-  
-//     &__column {
-   
-//       // flex: 0 1 50%;
-//       height: auto;
-//       // overflow: hidden;
-//       // display: flex;
-//       // flex-direction: column;
-//       // justify-content: center;
-//     }
-  
-//     &__title {
-//       // font-size: 2em;
-//       // text-transform: uppercase;
-//       // text-align: center;
-//       margin: 30px 0;
-//     }
-  
-//     &__list {
-//       padding-bottom: 40px;
-//       li {
-//         font-size: 1.8em;
-//         // text-transform: capitalize;
-//         // text-align: center;
-//         // font-family: $font-family-subtitle;
-//         // font-weight: 400;
-//         line-height: 1.5em;
-        
-//       }
-//     }
-  
-//     &__video {
-//       // border-radius: 10px;
-//       margin: 5px auto;
-//        width: 90%;
-//        height: 220px;
-//     }
-//   }
-// }
-
-// @media (max-width: 700px) and (orientation: landscape) {
-//   .home {
-   
-//     &__box {
-//       padding-top: 100px;
-//   //     // max-width: 100%;
-//   //     height: auto;
-//   //     // color: white;
-//   //     // // font-family: $font-family-title, sans-serif;
-//   //     // display: flex;
-//   //     // flex-direction: column;
-//   //     // justify-content: space-around;
-     
-//     }
-  
-//   //   &__greetings {
-//   //     // text-align: center;
-//   //     // line-height: 1.3em;
-//   //     font-size: 1.8em;
-//   //     // font-weight: 600;
-//   //     // letter-spacing: 0.1em;
-//   //   }
-  
-//   //   &__row {
-//   //     margin-right: 0;
-//   //     // font-size: 0.8em;
-//   //     padding: 10px 0;
-//   //     // font-weight: 700;
-//   //     // line-height: 1em;
-//   //     // display: block;
-//   //     // align-items: center;
-//   //     // justify-content: space-between;
-//   //   }
-  
-//   //   &__column {
-   
-//   //     // flex: 0 1 50%;
-//   //     height: auto;
-//   //     // overflow: hidden;
-//   //     // display: flex;
-//   //     // flex-direction: column;
-//   //     // justify-content: center;
-//   //   }
-  
-//   //   &__title {
-//   //     // font-size: 2em;
-//   //     // text-transform: uppercase;
-//   //     // text-align: center;
-//   //     margin: 30px 0;
-//   //   }
-  
-//   //   &__list {
-//   //     padding-bottom: 40px;
-//   //     li {
-//   //       font-size: 1.8em;
-//   //       // text-transform: capitalize;
-//   //       // text-align: center;
-//   //       // font-family: $font-family-subtitle;
-//   //       // font-weight: 400;
-//   //       line-height: 1.5em;
-        
-//   //     }
-//   //   }
-  
-//   //   &__video {
-//   //     // border-radius: 10px;
-//   //     margin: 5px auto;
-//   //      width: 90%;
-//   //      height: 220px;
-//   //   }
-//   }
-// }
