--- a/src/components/ask/ask.pug
+++ b/src/components/ask/ask.pug
@@ -4,7 +4,7 @@
     .ask__box
       .ask__image
         img(src=require("../../../images/student_asking_question.svg"), alt="ask") 
-      form.ask__form.form(action="https://formsubmit.co/caminante.msk@gmail.com" method="POST")
+      form.ask__form.form(action="https://formsubmit.co/contato@eformaliza.com" method="POST")
         .form__label
           label(for="name") Seu nome
         .form__input 
