translated esp / eng

--- a/src/components/ask/ask.pug
+++ b/src/components/ask/ask.pug
@@ -14,7 +14,7 @@
         .form__input
           input(type="phone" placeholder="telefone" name="phone" required)
         .form__label
-          label(for="name") Seu email
+          label(for="email") Seu email
         .form__input
           input(type="email" placeholder="email" name="email" required)
         input(type="hidden" name="_subject" value="Legal!!!!! Um novo e-mail de eformaliza.com!!!!")
