--- a/src/components/creation/creationEng.pug
+++ b/src/components/creation/creationEng.pug
@@ -1,41 +1,41 @@
 .creation#creation
   .container
-    .creation__title.title Criamos
+    .creation__title.title Creation
     .creation__row  
       .creation__item.item
         .item__img
           img(src=require("../../../images/icons/bolos/design.svg"), alt="web-design")
-        .item__description Desenho Gráfico
+        .item__description Graphic design
       .creation__item.item
         .item__img
           img(src=require("../../../images/icons/bolos/webPage.svg"), alt="web")
-        .item__description Websites Profissionais
+        .item__description Professional Websites
       .creation__item.item
         .item__img
           img(src=require("../../../images/icons/bolos/card.svg"), alt="card")
-        .item__description Cartões de Visita Virtuais
-    .creation__title.title Serviços relacionados
+        .item__description Virtual Business Cards
+    .creation__title.title Related services
     .creation__row
       .creation__item.item
         .item__img
           img(src=require("../../../images/icons/bolos/maintenance.svg"), alt="maintenance")
-        .item__description Manutenção de Websites
+        .item__description Websites maintenance
       .creation__item.item
         .item__img
           img(src=require("../../../images/icons/bolos/www.svg"), alt="hosting")
-        .item__description Assesoramento com Domínios e Hospedagens
+        .item__description Domain and Hosting Assistance
       .creation__item.item
         .item__img
           img(src=require("../../../images/icons/bolos/coding.svg"), alt="coding")
-        .item__description Serviços de Programação Front-End
+        .item__description Front-End Programming Services
     .creation__box
-      .creation__question O que garantimos ?
+      .creation__question Our guarantees
       .creation__about
         ul 
-          li Suporte técnico
-          li Desenvolvimento de funcionalidades
-          li Consultoria
-    a.creation__btn.btn(href="#ask") Saiba mais!
+          li Technical support
+          li Features development
+          li Consulting
+    a.creation__btn.btn(href="#ask") Learn more!
       
 
     
