--- a/src/components/creation/creationEsp.pug
+++ b/src/components/creation/creationEsp.pug
@@ -1,41 +1,41 @@
 .creation#creation
   .container
-    .creation__title.title Criamos
+    .creation__title.title Creamos
     .creation__row  
       .creation__item.item
         .item__img
           img(src=require("../../../images/icons/bolos/design.svg"), alt="web-design")
-        .item__description Desenho Gráfico
+        .item__description Diseño gráfico
       .creation__item.item
         .item__img
           img(src=require("../../../images/icons/bolos/webPage.svg"), alt="web")
-        .item__description Websites Profissionais
+        .item__description Sitios WEB profesionales
       .creation__item.item
         .item__img
           img(src=require("../../../images/icons/bolos/card.svg"), alt="card")
-        .item__description Cartões de Visita Virtuais
-    .creation__title.title Serviços relacionados
+        .item__description Tarjetas de visita virtuales
+    .creation__title.title Servicios relacionados
     .creation__row
       .creation__item.item
         .item__img
           img(src=require("../../../images/icons/bolos/maintenance.svg"), alt="maintenance")
-        .item__description Manutenção de Websites
+        .item__description Mantenimiento del sitio WEB
       .creation__item.item
         .item__img
           img(src=require("../../../images/icons/bolos/www.svg"), alt="hosting")
-        .item__description Assesoramento com Domínios e Hospedagens
+        .item__description Asesoría en Dominios y Hostings
       .creation__item.item
         .item__img
           img(src=require("../../../images/icons/bolos/coding.svg"), alt="coding")
-        .item__description Serviços de Programação Front-End
+        .item__description Servicios de programación front-end
     .creation__box
-      .creation__question O que garantimos ?
+      .creation__question ¿Qué garantizamos?
       .creation__about
         ul 
-          li Suporte técnico
-          li Desenvolvimento de funcionalidades
-          li Consultoria
-    a.creation__btn.btn(href="#ask") Saiba mais!
+          li Soporte técnico
+          li Desarrollo de funciones
+          li Consultoría
+    a.creation__btn.btn(href="#ask") ¡Saber mas!
       
 
     
