--- a/src/components/goal/goalEng.pug
+++ b/src/components/goal/goalEng.pug
@@ -5,11 +5,11 @@
         img(src=require("../../../images/laptop.png"), alt="why")
       .goal__box
         .goal__content
-          p.goal__question POR QUE É TÃO IMPORTANTE TER UM SITE ?
-          p.goal__answer Um site é a melhor vitrine para seu negócio online
+          p.goal__question WHY IS IT SO IMPORTANT TO HAVE A WEBSITE?
+          p.goal__answer A website is the best online showcase for your business
         .goal__content
-          p.goal__question POR QUE VOCÊ DEVE APOSTAR EM NÓS ?
-          p.goal__answer Na e-Formaliza, projetamos e criamos sites baseados em tecnologias comprovadas.  Desenvolver sites na e-Formaliza é a garantia de um trabalho com qualidade
+          p.goal__question WHY YOU SHOULD BET ON US?
+          p.goal__answer e-Formaliza designs and creates websites based on proven technologies. Developing websites by e-Formaliza is the guarantee of a quality work
       
 
 
