--- a/src/components/goal/goalEsp.pug
+++ b/src/components/goal/goalEsp.pug
@@ -5,13 +5,8 @@
         img(src=require("../../../images/laptop.png"), alt="why")
       .goal__box
         .goal__content
-          p.goal__question POR QUE É TÃO IMPORTANTE TER UM SITE ?
-          p.goal__answer Um site é a melhor vitrine para seu negócio online
+          p.goal__question ¿POR QUÉ ES TAN IMPORTANTE TENER UN SITIO WEB?
+          p.goal__answer Un sitio WEB es el mejor escaparate para su negocio en línea
         .goal__content
-          p.goal__question POR QUE VOCÊ DEVE APOSTAR EM NÓS ?
-          p.goal__answer Na e-Formaliza, projetamos e criamos sites baseados em tecnologias comprovadas.  Desenvolver sites na e-Formaliza é a garantia de um trabalho com qualidade
-      
-
-
-    
-    
+          p.goal__question ¿POR QUÉ DEBES APOSTAR CON NOSOTROS?
+          p.goal__answer e-Formaliza diseña y crea sitios WEB basados ​​en tecnologías probadas. Desarrollar sitios web con e-Formaliza es garantía de un trabajo de calidad
