--- a/src/components/header/headerEng.pug
+++ b/src/components/header/headerEng.pug
@@ -1,14 +1,14 @@
 header.header
   .container
-    a(href="./index.html")   
+    a(href="./eng.html")   
       img.header__logo.logo(src=require("../../../images/logo_principal.svg"), alt="eformaliza")
     nav.header__nav 
       .header__list
         a.header__item(href="#home" id="toHome") Home
-        a.header__item(href="#creation" id="toCreation") Creamos      
-        a.header__item(href="#promotion" id="toPromotion") Promovemos
+        a.header__item(href="#creation" id="toCreation") Creation      
+        a.header__item(href="#promotion" id="toPromotion") Promotion
         a.header__item(href="index.html") Blog
         a.header__item(href="index.html") FAQ
-        a.header__item(href="#contacts" id="toContacts") Contactos
+        a.header__item(href="#contacts" id="toContacts") Contacts
     nav.header__nav_burger
       .burger__inner  
