--- a/src/components/home/homeEsp.pug
+++ b/src/components/home/homeEsp.pug
@@ -10,7 +10,7 @@
         .home__column
           p.home__title Creamos sitios WEB modernos
           ul.home__list
-            li Creamos sitios WEB profissionales 
+            li Creamos sitios WEB profesionales
             li Preparamos diseño exclusivo
             li 03 meses de garantía 
             li Evaluación individual gratuita
