--- a/src/components/offers/offersEsp.pug
+++ b/src/components/offers/offersEsp.pug
@@ -1,20 +1,20 @@
 .offers
   .container
-    p.offers__title.title Aproveite as promoções de 2022
+    p.offers__title.title Aprovecha las promociones de 2022
     .offers__box
       ul.offers__list
         li.offers__item.offer
-          button.offer__btn(type="button") Seu Amigo Vale Desconto
+          button.offer__btn(type="button") Tu amigo vale el descuento
           .offer__description 
-            p Seu amigo contratando conosco website, vocês dois ganham 10% de desconto em todos os nossos serviços !
+            p Tu amigo contratando con nosotros el sitio web ¡Ambos obtienen un 10% de descuento en todos nuestros servicios!
         li.offers__item.offer
-          button.offer__btn(type="button") Sua Manutenção Gratis
+          button.offer__btn(type="button") Mantenimiento Gratuito
           .offer__description 
-            p Contrate nossos serviços de desenvolvimento até o dia 31 de maio e ganhe 06 meses de manutenção gratis !
+            p ¡Contrata nuestros servicios de desarrollo hasta el 31 de mayo y obtén 6 meses de mantenimiento gratis!
         li.offers__item.offer
-          button.offer__btn(type="button") Cadastro Google
+          button.offer__btn(type="button") Registro en Google Business
           .offer__description 
-            p Fechando sua contratação de até o dia 31 de maio, o cadastro de sua empresa no Google será realizado gratuitamente !
+            p Contratando hasta el 31 de mayo, ¡El registro de tu empresa en Google Business se realizará de forma gratuita!
       .offers__image
         img(src=require("../../../images/money.png"), alt="promotion")
 
