--- a/src/components/portfolio/portfolioEng.pug
+++ b/src/components/portfolio/portfolioEng.pug
@@ -1,6 +1,6 @@
 .portfolio
   .container
-    .portfolio__title.title Nossos projetos
+    .portfolio__title.title Our projects
     //Slider main container
     .swiper
       //Additional required wrapper
