--- a/src/components/promotion/promotionEng.pug
+++ b/src/components/promotion/promotionEng.pug
@@ -1,19 +1,19 @@
 .promotion#promotion
   .container
-    .promotion__title.title Promovemos
+    .promotion__title.title Promotion
     .promotion__row  
       .promotion__item.item
         .item__img
           img(src=require("../../../images/icons/instagram-red.svg"), alt="instagram")
-        .item__description Gerenciamento Instagram
+        .item__description Instagram Management
       .promotion__item.item 
         .item__img
           img(src=require("../../../images/icons/google-business-red.svg"), alt="google-business")
-        .item__description Cadastro no Google    
+        .item__description Google Business Subscribe 
     .promotion__box 
-      p.promotion__text O Gerenciamento de seu Instagram por especialistas com experiência aumentará o reconhecimento de sua marca e economizará seu tempo, redirecionando-o para gestão do seu negócio
-      p.promotion__text O cadastro no Google, aumentará a visibilidade de sua empresa na WEB e será fonte adicional para visitas de novos usuários e clientes, através de comentários e avaliações
-    a.promotion__btn.btn(href="#ask") Saiba mais!  
+      p.promotion__text Managing your Instagram by experienced staff increases your brand popularity and saves your time, redirecting it to managing your business
+      p.promotion__text Subscribing in Google Business increases your company's visibility on the WEB and will be an additional source for visits by new users and customers, through comments and evaluations
+    a.promotion__btn.btn(href="#ask") Learn more!  
       
 
     
