--- a/src/components/promotion/promotionEsp.pug
+++ b/src/components/promotion/promotionEsp.pug
@@ -5,15 +5,15 @@
       .promotion__item.item
         .item__img
           img(src=require("../../../images/icons/instagram-red.svg"), alt="instagram")
-        .item__description Gerenciamento Instagram
+        .item__description Gestión de Instagram
       .promotion__item.item 
         .item__img
           img(src=require("../../../images/icons/google-business-red.svg"), alt="google-business")
-        .item__description Cadastro no Google    
+        .item__description Registro en Google Business  
     .promotion__box 
-      p.promotion__text O Gerenciamento de seu Instagram por especialistas com experiência aumentará o reconhecimento de sua marca e economizará seu tempo, redirecionando-o para gestão do seu negócio
-      p.promotion__text O cadastro no Google, aumentará a visibilidade de sua empresa na WEB e será fonte adicional para visitas de novos usuários e clientes, através de comentários e avaliações
-    a.promotion__btn.btn(href="#ask") Saiba mais!  
+      p.promotion__text La gestión de su Instagram por parte de expertos aumentará el conocimiento de su marca y le ahorrará tiempo, redirigiéndolo a la gestión de su negocio
+      p.promotion__text El registro en Google Business aumentará la visibilidad de su empresa en la WEB y será una fuente adicional de visitas de nuevos usuarios y clientes, a través de comentarios y valoraciones
+    a.promotion__btn.btn(href="#ask") ¡Saber más! 
       
 
     
