--- a/src/components/thanks/thanksEng.pug
+++ b/src/components/thanks/thanksEng.pug
@@ -3,6 +3,6 @@
     .thanks__box 
       h1 Thank You!
       h1 We'll get in touch with you soon!
-      a.thanks__btn.btn(href="https://eformaliza.com/") Ok!
+      a.thanks__btn.btn(href="https://eformaliza.com/eng.html") Ok!
 
           
