--- a/src/components/ask/askEng.pug
+++ b/src/components/ask/askEng.pug
@@ -1,26 +1,26 @@
 .ask#ask
   .container
-    p.ask__title.title SOLICITE UMA CONVERSA SEM COMPROMISSO:
+    p.ask__title.title START A CONVERSATION RIGHT NOW:
     .ask__box
       .ask__image
         img(src=require("../../../images/student_asking_question.svg"), alt="ask") 
       form.ask__form.form(action="https://formsubmit.co/contato@eformaliza.com" method="POST")
         .form__label
-          label(for="name") Seu nome
+          label(for="name") Your name
         .form__input 
-          input(type="text" placeholder="nome" name="name" required)
+          input(type="text" placeholder="name" name="name" required)
         .form__label
-          label(for="name") Seu telefone
+          label(for="name") You phone
         .form__input
-          input(type="phone" placeholder="telefone" name="phone" required)
+          input(type="phone" placeholder="phone" name="phone" required)
         .form__label
-          label(for="name") Seu email
+          label(for="email") Your email
         .form__input
           input(type="email" placeholder="email" name="email" required)
         input(type="hidden" name="_subject" value="Legal!!!!! Um novo e-mail de eformaliza.com!!!!")
-        input(type="hidden" name="_next" value="https://eformaliza.com/emailSent.html")
+        input(type="hidden" name="_next" value="https://eformaliza.com/emailSentEng.html")
         input(type="hidden" name="_template" value="table")
         input(type="hidden" name="_captcha" value="false")
-        button.form__btn.btn(type="submit") Solicitar!  
+        button.form__btn.btn(type="submit") Ask!  
         
 
