--- a/src/components/discount/discountEsp.pug
+++ b/src/components/discount/discountEsp.pug
@@ -1,12 +1,11 @@
 .discount
   .container
-    p.discount__title.title Atenção!!!
+    p.discount__title.title Atención!!!
     .discount__image 
       img(src=require("../../../images/fire.png"), alt="sale")
     .discount__timer.timer
-      p.timer__text ATÉ 31 DE MAIO, GANHE DESCONTO PROMOCIONAL DE 10% EM TODOS OS NOSSOS SERVIÇOS
-      
+      p.timer__text HASTA EL 31 DE MAYO, OBTÉN UN 10% DE DESCUENTO PROMOCIONAL EN TODOS NUESTROS SERVICIOS
       p.timer__time 21:13:33
       a.timer__title(href="#ask") 
-        p.timer__link Clique para o primeiro passo!   
-        p A concorrência já está online e você?
+        p.timer__link ¡Haz clic para el primer paso!   
+        p La competencia ya está en línea y tú?
