--- a/src/components/footer/footerEsp.pug
+++ b/src/components/footer/footerEsp.pug
@@ -1,10 +1,10 @@
 footer.footer#contacts
   .container 
-    p.footer__title.title Contatos
+    p.footer__title.title Contactos
     .footer__row
       .footer__item
         img(src=require("../../../images/icons/new-footer-icons/whatsapp.svg"), alt="whatsapp")
-        p 21-99936-5384
+        p +55 21-99936-5384
       .footer__item
         img(src=require("../../../images/icons/new-footer-icons/mail.svg"), alt="email")
         p contato@eformaliza.com
@@ -21,5 +21,5 @@ footer.footer#contacts
       .footer__unit 
         .footer__copyright 
           p Created by 
-            a(href="http://eformaliza.com/") eformaliza.com
+            a(href="http://eformaliza.com/esp.html") eformaliza.com
   
