--- a/src/components/header/headerEsp.pug
+++ b/src/components/header/headerEsp.pug
@@ -1,6 +1,6 @@
 header.header
   .container
-    a(href="./index.html")   
+    a(href="./esp.html")   
       img.header__logo.logo(src=require("../../../images/logo_principal.svg"), alt="eformaliza")
     nav.header__nav 
       .header__list
