--- a/src/components/thanks/thanksEsp.pug
+++ b/src/components/thanks/thanksEsp.pug
@@ -3,6 +3,6 @@
     .thanks__box 
       h1 ¡Muchas gracias!
       h1 ¡Nos comunicaremos contigo pronto!
-      a.thanks__btn.btn(href="https://eformaliza.com/") Ok!
+      a.thanks__btn.btn(href="https://eformaliza.com/esp.html") Ok!
 
           
