--- a/src/emailSentEng.pug
+++ b/src/emailSentEng.pug
@@ -6,9 +6,9 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
     meta(name="description" content="criação de web sites profissionais" )
     meta(name="keywords" content="criacão, sites, web, page, pagina, emprendedor, empresa, advogados, guarulhos, osasco, salvador, goiania, joinville, curitiba, fortaleza, campinas, sp, porto alegre, df, brasilia, curitiba, bh, criacao")
-    title ¡Muchas gracias!
+    title Thank you!
   body
-    include components/thanks/thanksEsp
+    include components/thanks/thanksEng
 
    
     
