--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,7 +5,7 @@
 @use "../components/ask/ask";
 @use "../components/discount/discount";
 @use "../components/goal/goal";
-// @use "../components/services/services";
+@use "../components/langToggle/langToggle";
 @use "../components/portfolio/portfolio";
 @use "../components/thanks/thanks";
 @use "../components/offers/offers";
