--- a/src/eng.pug
+++ b/src/eng.pug
@@ -14,6 +14,7 @@ html(lang="en")
     meta(property="og:image" content="https://i.postimg.cc/RCWvsSxt/logo-principal.jpg") 
     title e-Formaliza
   body#home(style="visibility: hidden;")
+    include components/langToggle/langToggleEng
     include components/header/headerEng
     include components/home/homeEng
     include components/goal/goalEng
