--- a/src/esp.pug
+++ b/src/esp.pug
@@ -14,6 +14,7 @@ html(lang="en")
     meta(property="og:image" content="https://i.postimg.cc/RCWvsSxt/logo-principal.jpg") 
     title e-Formaliza
   body#home(style="visibility: hidden;")
+    include components/langToggle/langToggleEsp
     include components/header/headerEsp
     include components/home/homeEsp
     include components/goal/goalEsp
