--- a/src/index.pug
+++ b/src/index.pug
@@ -14,6 +14,7 @@ html(lang="en")
     meta(property="og:image" content="https://i.postimg.cc/RCWvsSxt/logo-principal.jpg") 
     title e-Formaliza
   body#home(style="visibility: hidden;")
+    include components/langToggle/langToggle
     include components/header/header
     include components/home/home
     include components/goal/goal
