--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -8,8 +8,6 @@
   text-align: center;
   z-index: 300;
 
- 
-
   img.logo {
    
     transition: all 0.8s linear 0.05s;
@@ -17,7 +15,7 @@
     display: block;
     height: 180px;
     padding: 0 0 15px;
-    z-index: 151;
+    z-index: 500;
     position: relative;
    
     
@@ -86,6 +84,8 @@
     transition: all 0.8s linear 0.05s;
     top: 20px;
     right: 6%;
+    z-index: 10000;
+   
 
     .burger__inner {
       background-color: white;
@@ -95,6 +95,7 @@
       transform: translateY(-50%);
       box-shadow: 0 0 2px white, 0 0 3px red;
       transition: all 0.8s linear 0.05s;
+      z-index: 10000;
     }
   }
 
@@ -102,6 +103,7 @@
   &__nav_burger::after {
     content: "";
     display: block;
+    z-index: 10000;
     height: 4px;
     width: 100%;
     background-color: white;
@@ -193,12 +195,18 @@
     img.logo {
       height: 90px;
       opacity: 1;
+      position: relative;
+      left: 50%;
+      transform: translateX(-50%);
+     
       
     }
 
     &__nav_burger {
       display: block;
-      
+      z-index: 600;
+      position: absolute;
+    
     }
 
     &__nav_burger.dropped {
@@ -292,11 +300,24 @@
       top: 20px;
       transition: all 0.8s linear 0.05s;
     }
-
+    
     img.logo.scroll {
       height: 80px;
-      opacity: 1;
-      
+      opacity: 0;
+      transition: none;
+      position: relative;
+      left: 30px; 
     }
+
+    // img.logo.scroll::before {
+    //   content: "*";
+    //   color:#fff;
+    //   display: block;
+    //   position: absolute;
+    //   height: 80px;
+    //   opacity: 1;
+    //   transition: all 0.8s linear 0.05s;
+    //   left: 30px; 
+    // }
   }
 }
