--- a/src/components/langToggle/langToggle.scss
+++ b/src/components/langToggle/langToggle.scss
@@ -1,20 +1,28 @@
 @import "../../styles/variables";
 
 .langToggle {
-
+ 
   position: absolute;
   right: 0;
   top: 10px;
   z-index: 1000;
+  width: fit-content;
+  
 
   &__row {
     display: flex;
     justify-content: flex-end;
+    flex-direction: row-reverse;
     margin-right: 40px;
+    position: relative;
+    z-index: 700;
+  
   }
 
   &__item {
     margin-left: 50px;
+    position: relative;
+    z-index: 900;
   }
 
   &__btn {
@@ -35,4 +43,51 @@
 
   
 
+}
+
+@media (max-width: 1160px) {
+  .langToggle {
+    font-size: 0.8em;
+
+    &__item {
+      margin-left: 30px;
+    }
+  }
+  
+}
+
+.langToggle .container {
+  z-index: 1;
+}
+
+@media (max-width: 700px) {
+  .langToggle {
+    left: 0;
+    font-size: 1em;
+    color: rgb(163, 159, 159);
+
+    
+  &__row {
+    flex-direction: column;
+    width: fit-content;
+    margin: 10px 0 0 20px;
+  }
+
+    &__item {
+      margin-left: 0;
+      margin-bottom: 20px;
+      width: fit-content;
+      // border: 1px solid yellow;
+    }
+
+    &__btn.active {
+      display: none;
+      
+    }
+  }
+
+  .langToggle.dropped {
+    opacity: 0;
+  }
+  
 }
