--- a/src/components/langToggle/langToggleEng.pug
+++ b/src/components/langToggle/langToggleEng.pug
@@ -1,9 +1,8 @@
 .langToggle 
-  .container 
-    .langToggle__row 
-      .langToggle__item 
-        button.langToggle__btn Pt
-      .langToggle__item 
-        button.langToggle__btn.active En
-      .langToggle__item 
-        button.langToggle__btn Es
+  .langToggle__row 
+    .langToggle__item#pt 
+      button.langToggle__btn Pt
+    .langToggle__item#es 
+      button.langToggle__btn Es
+    .langToggle__item#en 
+      button.langToggle__btn.active En
